# nix-template

./: README.md  default.nix  shell.nix  template.cabal  versions.json
